[gd_scene load_steps=5 format=2]

[ext_resource path="res://materials/noblur_fx_yellow.material" type="Material" id=1]
[ext_resource path="res://weapons/EdgeCore.gd" type="Script" id=2]

[sub_resource type="SphereMesh" id=1]
radial_segments = 4
rings = 1

[sub_resource type="CapsuleShape" id=2]
radius = 0.2
height = 1.6

[node name="EdgeCore" type="Spatial"]
script = ExtResource( 2 )

[node name="Arm" type="Spatial" parent="."]

[node name="Sword" type="Spatial" parent="Arm"]

[node name="SwordModel" type="Spatial" parent="Arm/Sword"]

[node name="Hilt" type="MeshInstance" parent="Arm/Sword/SwordModel"]
transform = Transform( 0.14, 0, 0, 0, 0.4, 0, 0, 0, 0.2, 0, 0, 0 )
mesh = SubResource( 1 )
material/0 = ExtResource( 1 )

[node name="Blade" type="MeshInstance" parent="Arm/Sword/SwordModel"]
transform = Transform( 0.1, 0, 0, 0, 0.2, 0, 0, 0, 1.1, 0, 0, 0.7 )
mesh = SubResource( 1 )
material/0 = ExtResource( 1 )

[node name="SwordHitbox" type="Area" parent="Arm/Sword"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.8 )

[node name="CollisionShape" type="CollisionShape" parent="Arm/Sword/SwordHitbox"]
shape = SubResource( 2 )
[connection signal="body_entered" from="Arm/Sword/SwordHitbox" to="." method="_on_SwordHitbox_body_entered"]
